--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-mlflow==2.19.0
 cloudpickle==3.1.1
+dagshub==0.6.3
+matplotlib==3.10.6
+mlflow==2.19.0
 numpy==2.3.5
 packaging==24.2
 pandas==2.3.3
@@ -8,4 +10,5 @@ pyarrow==18.1.0
 pyyaml==6.0.3
 scikit-learn==1.7.2
 scipy==1.16.3
+seaborn==0.13.2
 xgboost==3.1.2
